:skull: Fix christmas tree position on mobile device

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3392,8 +3392,8 @@ body {
 }
 
 .christmastree {
-  bottom: 0;
-  left: 20px;
+  position: relative;
+  left: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
