--- a/src/sass/components/_christmastree.scss
+++ b/src/sass/components/_christmastree.scss
@@ -1,6 +1,6 @@
 .christmastree {
-  bottom: 0;
-  left: 20px;
+  position: relative;
+  left: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
